<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:id="@+id/fragment_container"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_title_label"/>
    <EditText
        android:id="@+id/crime_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/crime_title_hint"/>
    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_details_label"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/crime_date"
        android:layout_width="250dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/shapr"
        android:layout_height="50dp"
        android:text="@string/wed_nov"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/crime_time"
        android:layout_width="250dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/shapr"
        android:layout_height="50dp"
        android:text="@string/wed_nov"/>
    <CheckBox
        android:id="@+id/crime_solved"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_solved_label"/>
    <Button
        android:id="@+id/crime_suspect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_suspect_text"/>
    <Button
        android:id="@+id/crime_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_report_text"/>

</LinearLayout>